# Sentenial-X

./: .env  .env.development  .gitignore  About.MD  About.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app. py  cli.py  config.py  cve_db.json  demo.py  demo2.py  docker-compose.yml  main.py  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml  pyqt5.py  requirements.txt  run.py  run.sh  sentenial_core.py  sentenial_main.py  sentenial_service.py  sentenial_ui.py  sentenialx.py  sentenialx.spec  setup.py  start.sh  start_agents.py  threat_collector_gui.py
.github/: dependabot.yml
agents/: __init__.py  base_agent.py  baseline_agent.py  config.py  endpoint_agent.py  manager.py  ppo_agent.py  retaliation.bot.py  retaliation_agent.py  retaliation_bot.py  sentenial_x_ai_bot.py  telemetry.py  trace_agent.py
ai_core/: __init__.py  adversarial_detector.py  api_interface.py  attack_simulator.py  config.py  countermeasure_predictor.py  datastore.py  detection.py  embeddings_service.py  encoder.py  feedback.py  ipc_server.py  jailbreak_detector.py  logger.py  model_loader.py  orchestrator.py  predictive_model.py  threat_analyzer.py  threat_classifier.py  train_model_with_feedback.py  utils.py  wormgpt_detector.py
api/: README.md  __init__.py  config.py  deps.py  errors.py  main.py  middleware.py  models.py  requirements.txt  schemas.py  server.py  threat_api.py  utils.py
app/: layout.tsx  page.tsx
apps/: README.md  __init__.py  layout.py  layout.tsx
assets/: __init__.py
chain-executor/: executor.py  graph_utils.py  telemetry.py
chatbot/: demo2.py
cli/: .env  .gitignore  README.md  __init__.py  agent.py  agent_daemon.py  agent_daemon_full.py  alerts.py  blind_spot_tracker_cli.py  cli.py  config.py  cortex.py  live.py  logger.py  memory.py  memory_adapter.py  orchestrator.py  sentenial_cli.py  telemetry.py  wormgpt.py
components/: character-creation.tsx  dialogue-interface.tsx  game-interface.tsx  world-map.tsx
config/: .env.development  IOC_triggers.json  __init__.py  config.py  emulation_profile.yaml  exfil_mockup.cfg  settings.json
core/: README_RECON.md  __init__.py  ai_engine.py  brute.py  controller.py  cortex.py  countermeasures.py  countermeasures_original_backup.py  feedback py  ingestor.py  learning_engine.py  neural_engine.py  orchestrator.py  recon.py  report.py  sandbox_vm.py  scanner.py  sentenial_main.py  telemetry.py
dashboard/: app.py
data/: __init__.py  memory.db
docker/: Dockerfile  docker-compose.yml
docs/: Roadmap.MD  api.MD  api_reference.MD  architecture.MD  changelog.MD  cli.MD  contributing.MD  core_modules.MD  faq.MD  index.MD  installation.MD  license.MD  mkdocs.yml  overview.MD  playbooks.MD  telemetry.MD
emulation/: __init__.py  command_and_control.py  malware_loader.py
envs/: __init__.py  cyber_env.py  network_env.py  sandbox_env.py
etc/: README.md  config.yaml  env.sample  logging.conf  sentenial-threat-monitor.env  startup.py
gui/: __init__.py  hub.py  main.py  main_gui.py  sentenialx_gui.py
infra/: __init__.py  cache.py  config.py  db.py  queue.py
lib/: character-system.ts  dialogue-system.ts  game-engine.ts  minepi-sdk.ts  world-map.ts
logs/: __init__.py  countermeasure_log.json  threats.logs
memory/: agent_memory.json
ml/: __init__.py  train_bert_intent_classifier.py
models/: artifacts.py  inference_pipeline.py  utils.py
multiagent/: coordinater.py
plugins/: __init__.py  pe_info.py  (+7 more)
sentenial-x/: ,__main__.py  __init__.py  pyproject.toml
sentenial-x-ai/: Makefile  __init__.py  __main__.py  cli.py  command_listener.py  config.py  executor.py  orchestrator.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  strategist.py
sentenial-x-ai/agents/: __init__.py  a3c_agent.py  base_agent.py  baseline_agent.py  dqn_agent.py
sentenial-x-ai/agents/retaliation-bot/: __init__.py  actions.py  api.py  logger.py
sentenial-x-ai/commands/: __init__.py  agent_commands.json  serve.py  train.py
sentenial-x-ai/eval/: evaluate.py  metrics.py
sentenial-x-ai/memory/: agent_memory.json
sentenial-x-ai/multiagent/: env_wrappers.py
sentenial-x-ai/plugins/: __init__.py  base.py  example_plugin.py  loader.py
sentenial-x-ai/telemetry/: feature_store.py  ingest_kafka.py  online_client.py
sentenial-x-ai/tests/: test_cli.py
sentenial-x-ai/trainer/: __init__.py  dataset.py  trainer.py
sentenial-x-ai/training/: train_agent.py  train_ppo.py
sentenial-x/api/: __init__.py
sentenial-x/cli/: __init__.py
sentenial-x/sentenialx-k8s/: kustimization.yaml
sentenial-x/telemetry/: __init__.py
sentenial_x_ai/: README.md  agent.py  cli.py  command_listener.py  config.py  executor.py  heartbeat.py  learner.py  memory.py  ml_classifier.py  pyproject.toml  requirements.txt
sentenial_x_ai/memory/: agent_memory.json
sentenial_x_ai/plugins/: loader_inside_agent.py
sentenial_x_ai/tests/: test_cli.py
(+720 files in other folders)
