[metadata]
name = sentenial-x-ai
version = 0.1.0
description = Sentenial-X AI — Autonomous Cyber Defense, Simulation, and RL Agents
long_description = file: README.md
long_description_content_type = text/markdown
author = Sentenial-X Team
author_email = contact@sentenialx.io
url = https://github.com/your-org/sentenial-x-ai
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Topic :: Security
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://docs.sentenialx.io
    Source = https://github.com/your-org/sentenial-x-ai
    Tracker = https://github.com/your-org/sentenial-x-ai/issues

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False
install_requires =
    stable-baselines3==2.2.0
    gym==0.26.5
    numpy
    torch>=2.0
    confluent-kafka
    sqlalchemy
    psycopg2-binary
    tqdm

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    flake8
    mypy
    pre-commit
docs =
    sphinx
    sphinx-rtd-theme

[options.package_data]
* = *.json, *.yaml, *.yml

[flake8]
max-line-length = 100
exclude = .venv,.git,__pycache__,build,dist
ignore =
    E203
    W503

[mypy]
python_version = 3.10
ignore_missing_imports = True
disallow_untyped_defs = False
warn_unused_ignores = True
warn_return_any = True

[tool:pytest]
testpaths = tests
addopts = -ra -q --cov=sentenial_x --cov-report=term-missing

[coverage:run]
branch = True
source = sentenial_x

[coverage:report]
show_missing = True
skip_covered = True
