[project]
name = "Sentenial-X"
version = "2.0.0"
description = "ML-Powered Content Sentinel"
dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "aiohttp",
    "requests",
    "numba",
    "numpy",
    "optimum[onnxruntime]",
    "transformers",
    "scikit-learn",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
