[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentenialx"
version = "0.1.0"
description = "📡 Sentenial-X AI Agent CLI Interface"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28",
]

[project.scripts]
sentenialx = "sentenialx.cli:app"
